Added todo entity, changes namespaces, fixes

--- a/src/Todo.Api/TodoApp.Api.csproj
+++ b/src/Todo.Api/TodoApp.Api.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>TodoApp.Api</AssemblyName>
+    <RootNamespace>TodoApp.Api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Todo.Application\Todo.Application.csproj" />
-    <ProjectReference Include="..\Todo.Infrastructure\Todo.Infrastructure.csproj" />
+    <ProjectReference Include="..\Todo.Application\TodoApp.Application.csproj" />
+    <ProjectReference Include="..\Todo.Infrastructure\TodoApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
