--- a/src/Todo.Application/TodoApp.Application.csproj
+++ b/src/Todo.Application/TodoApp.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
